ICO-2881 # Fix docker code reloading

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports: 
       - "2300:2300"
     volumes:
-      - ../:/app:cached
+      - ./:/app:cached
 
   swagger-ui:
     image: swaggerapi/swagger-ui
